@@ -4,3 +4,4 @@ jsonpickle
 twilio
 coveralls
 pytz
+html2text
